# 3D-Model-Viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/implementation/: Camera.cpp  Camera.h  Debug.h  EBO.cpp  EBO.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  game.cpp  game.h
src/implementation/Model/: EBO.cpp  EBO.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/resources/: test.glb
src/shaders/: Shader.cpp  Shader.h  default.frag  default.vert
